--- a/package.json
+++ b/package.json
@@ -29,13 +29,19 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.6",
     "cordova-android": "7.1.0",
-    "cordova-ios": "^4.5.4",
+    "cordova-ios": "4.5.4",
+    "cordova-plugin-browsertab": "^0.2.0",
+    "cordova-plugin-buildinfo": "^2.0.1",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^5.4.0",
+    "cordova-universal-links-plugin": "^1.2.1",
     "es6-promise-plugin": "^4.2.2",
     "firebase": "^4.12.1",
     "ionic-angular": "3.9.2",
@@ -59,6 +65,16 @@
       "cordova-plugin-x-socialsharing": {},
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To get your location"
+      },
+      "cordova-plugin-buildinfo": {},
+      "cordova-universal-links-plugin": {},
+      "cordova-plugin-browsertab": {},
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-customurlscheme": {
+        "URL_SCHEME": "com.firebase.cordova",
+        "ANDROID_SCHEME": " ",
+        "ANDROID_HOST": " ",
+        "ANDROID_PATHPREFIX": "/"
       }
     },
     "platforms": [
